# sro-noso-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  check_tables.py  clear_alembic.py  docker-compose.prod.yml  docker-compose.yml  minimal_bot.py  pyproject.toml  requirements.txt  test_callback.py  test_db.py  test_minimal.py  test_postgres_connection.py  test_redis_connection.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20250718_2134_add_feedback_relationship.py  3bdcc269ee28_initial.py  58de2cd315dc_initial_migration.py  8467f11e4f53_add_feedback_relationship_to_user_model.py  e5daa2c7261d_add_feedback_relationship_to_user_model.py  ee5e4c8c5131_add_relationships_between_user_session_.py
app/: __init__.py  main.py  minimal_bot.py
app/ai_integration/: __init__.py  deepseek_client.py  deepseek_sdk.py  document_processor.py  embeddings.py  rag_system.py  vector_store.py
app/bot/: __init__.py  bot_instance.py
app/bot/filters/: __init__.py  admin_filter.py  member_filter.py
app/bot/handlers/: __init__.py  consultation.py  documents.py  error_handler.py  help.py  membership.py  profile.py  start.py
app/bot/keyboards/: __init__.py  inline_keyboards.py  reply_keyboards.py
app/bot/middleware/: __init__.py  auth_middleware.py  logging_middleware.py  metrics_middleware.py  rate_limit_middleware.py
app/database/: __init__.py  connection.py
app/database/migrations/: 001_initial.py  002_add_feedback.py  003_add_indexing.py  __init__.py
app/database/repositories/: __init__.py  document_repository.py  message_repository.py  session_repository.py  user_repository.py
app/models/: __init__.py  base.py  document.py  feedback.py  message.py  session.py  user.py
app/monitoring/: __init__.py  alerts.py  health_check.py  metrics.py
app/services/: __init__.py  ai_service.py  auth_service.py  document_service.py  notification_service.py  session_service.py  sro_registry_service.py  user_service.py
app/utils/: __init__.py  formatters.py  helpers.py  logging_config.py  security.py  validators.py
config/: __init__.py  database.py  logging.yaml  nginx.conf  prometheus.yml  settings.py
data/documents/statutes/: Квалификационный стандарт Руководитель строительной организации.docx  Квалификационный стандарт Специалист по организации строительства.docx  Положение о Контрольном комитете.doc  Положение о дисциплинарном органе.docx  Положение о дисциплинарных взысканиях за нарушения строительных норм.doc  Положение о жалобах на членов СРО.doc  Положение о компенсационном фонде возмещения вреда.doc  Положение о компенсационном фонде обеспечения договорных обязательств.doc  Положение о контроле за деятельностью членов.doc  Положение о реестре членов.docx  Положение о страховании гражданской ответственности.doc  Положение о страховании ответственности.doc  Положение о членстве в СРО.doc  Положение об анализе отчётности членов СРО.docx  Положение об информационной открытости.doc  Стандарт Ассоциации.docx
scripts/: import_documents.py  setup.sh
